azure: Allow users to set visibility to components
Adding a field in the install config to allow the users to set
the visibility of ingress and api servers.

--- a/data/data/install.openshift.io_installconfigs.yaml
+++ b/data/data/install.openshift.io_installconfigs.yaml
@@ -2160,6 +2160,18 @@ spec:
                 description: Deprecated name for NetworkType
                 type: string
             type: object
+          operatorPublishingStrategy:
+            description: OperatorPublishingStrategy controls the visibility of ingress
+              and apiserver. Defaults to public.
+            properties:
+              apiserver:
+                description: APIServer sets the visibility of the load balancers servicing
+                  the APIserver.
+                type: boolean
+              ingress:
+                description: Ingress sets the visibility of the created dns resources.
+                type: boolean
+            type: object
           platform:
             description: Platform is the configuration for the specific platform upon
               which to perform the installation.
