azure: Add support for multi zonal NAT gateways
Adding support to install multiple NAT gateways per subnet.
The zone in which they will be installed is not customizable
due to needing an upstream PR to fix CAPZ.

--- a/data/data/install.openshift.io_installconfigs.yaml
+++ b/data/data/install.openshift.io_installconfigs.yaml
@@ -4841,6 +4841,33 @@ spec:
                           type: string
                         type: array
                     type: object
+                  natGatewaySpec:
+                    description: |-
+                      NatGatewaySpec allows the user to specify the subnets and the nat gateway configuration for each subnet.
+                      Since only one nat gateway is allowed per subnet, users can create multiple subnets and create nat gateway
+                      for each subnet for zone resilience.
+                    items:
+                      properties:
+                        IPDNSName:
+                          description: IPDNSName specifies the dns name for the public
+                            IP specified.
+                          type: string
+                        name:
+                          description: Name of the nat gateway to be created.
+                          type: string
+                        publicIPName:
+                          description: PublicIPName specifies any public IP to be
+                            assigned to the nat gateway
+                          type: string
+                        subnet:
+                          description: Subnet specifies the name of the subnet to
+                            be created.
+                          type: string
+                      required:
+                      - name
+                      - subnet
+                      type: object
+                    type: array
                   networkResourceGroupName:
                     description: NetworkResourceGroupName specifies the network resource
                       group that contains an existing VNet
@@ -4882,6 +4909,7 @@ spec:
                       VNet for the installer to use
                     type: string
                 required:
+                - natGatewaySpec
                 - region
                 type: object
               baremetal:
