--- a/data/data/install.openshift.io_installconfigs.yaml
+++ b/data/data/install.openshift.io_installconfigs.yaml
@@ -5305,6 +5305,42 @@ spec:
                       This resource group must be empty with no other resources when trying to use it for creating a cluster.
                       If empty, a new resource group will created for the cluster.
                     type: string
+                  subnets:
+                    description: Subnets is the list of subnets the user can bring
+                      into the cluster to be used.
+                    items:
+                      description: SubnetSpec specifies the properties the subnet
+                        needs to be used in the cluster.
+                      properties:
+                        cidr:
+                          description: |-
+                            CIDR specifies the CIDR for the subnet only when it needs to be created.
+                            Ignore if subnet already exists.
+                          items:
+                            type: string
+                          type: array
+                        name:
+                          description: Name of the subnet.
+                          type: string
+                        natGateway:
+                          description: |-
+                            NatGatewayName specifies the name of the NAT gateway to be created for this subnet.
+                            Can only be used if the outbound type is set to MultiZoneNatGateway.
+                          type: string
+                        natGatewayAZ:
+                          description: NatGatewayAZ specifies the availability zone
+                            the NAT gateway needs to be placed in.
+                          type: string
+                        role:
+                          description: |-
+                            Role specifies the actual role which the subnet should be used in.
+                            kubebuilder:validation:Enum="";node;control-plane
+                          type: string
+                      required:
+                      - name
+                      - role
+                      type: object
+                    type: array
                   userProvisionedDNS:
                     default: Disabled
                     description: |-
