azure: Add support for multi zonal NAT gateways
Adding support to install multiple NAT gateways per subnet in
the specific zones they need to be in.

Also, allowing the users to bring their own subnets.

(NAT gateways on BYO subnets are not supported by CAPZ, it just
creates a dummy NAT gateway and doesn't attach it to the subnet).

--- a/data/data/install.openshift.io_installconfigs.yaml
+++ b/data/data/install.openshift.io_installconfigs.yaml
@@ -5313,6 +5313,28 @@ spec:
                       This resource group must be empty with no other resources when trying to use it for creating a cluster.
                       If empty, a new resource group will created for the cluster.
                     type: string
+                  subnets:
+                    description: Subnets is the list of subnets the user can bring
+                      into the cluster to be used.
+                    items:
+                      description: SubnetSpec specifies the properties the subnet
+                        needs to be used in the cluster.
+                      properties:
+                        name:
+                          description: Name of the subnet.
+                          type: string
+                        role:
+                          description: Role specifies the actual role which the subnet
+                            should be used in.
+                          enum:
+                          - node
+                          - control-plane
+                          type: string
+                      required:
+                      - name
+                      - role
+                      type: object
+                    type: array
                   userProvisionedDNS:
                     default: Disabled
                     description: |-
